tests/compile-fail/compile_fail__mapfile_does_not_exist.snap
---
source: tests/compile-fail.rs
expression: stderr
---
error: while resolving 'this/is/a/bad/path': No such file or directory (os error 2)
   ┌─ <input>:25:25
   │
25 │         #pragma mapfile "this/is/a/bad/path"
   │                         ^^^^^^^^^^^^^^^^^^^^ error loading mapfile


